--- a/css/navbar.css
+++ b/css/navbar.css
@@ -32,7 +32,8 @@
                 padding:0px;
                 background-color:#000000;
                 display:none;
-                position:absolute
+                position:absolute;
+                z-index: 1;
             }
 
             .dropdown:hover .dropdown-content{
